Fixing mobile alignment

--- a/src/components/menu/Menu.css
+++ b/src/components/menu/Menu.css
@@ -17,7 +17,8 @@
     background-image: url("./Opening.png");
     background-size: contain;
     background-repeat: no-repeat;
-    background-position: center;
+    background-position-x: 50%;
+    background-position-y: top;
 }
 
 .options {
